# agentos

./: .coverage 2  .coverage 3  .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  coverage.xml  docker-compose.yml  pyproject.toml  quick_smoke_test.py  test_all_panels.py  test_panels_final.py  test_panels_js.py  test_panels_working.py  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  test.yml
benchmarks/: run_benchmarks.py
benchmarks/data/: evaluation_responses.json
benchmarks/results/: benchmark_metrics.json
dashboard/: index.html
deploy/helm/agentos/: Chart.yaml  values.yaml
deploy/helm/agentos/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
docs/: LAUNCH_POSTS.md  TECHNICAL_DEEP_DIVE.md  architecture_diagram_description.md  benchmarks.md  generate_architecture.py  index.html  mcp.md
docs/adr/: 001-in-memory-vector-store-default.md  001-in-memory-vector-store.md  002-fastapi-over-flask-django.md  002-fastapi-web-framework.md  003-llm-as-judge-for-sandbox.md  003-llm-as-judge-testing.md  004-json-file-storage-over-database.md  004-json-file-storage.md  005-governed-agent-class-over-decorators.md  005-governed-agent-unified-class.md  006-agent-mesh-protocol.md  007-embedding-backends.md  README.md
examples/: ab_test_demo.py  agent.yaml  auth_demo.py  branching_demo.py  demo_mode.py  embed_demo.html  event_demo.py  full_demo.py  learning_demo.py  marketplace_demo.py  mcp_server_demo.py  memory_demo.py  mesh_demo.py  multi_model_demo.py  multimodal_demo.py  observability_demo.py  opentelemetry_demo.py  optimizer_demo.py  plugin_demo.py  quickstart.py  rag_demo.py  real_tools_demo.py  run_web_builder.py  run_with_governance.py  run_with_monitor.py  scheduler_demo.py  simulation_world_demo.py  streaming_demo.py  team_demo.py  templates_demo.py  test_sandbox.py  workflow_demo.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/pages/: VisualBuilder.tsx
plugins/: example_plugin.py  github_plugin.py
scripts/: deploy.sh  mcp_manual_test.py
src/agentos/: __init__.py  __main__.py  cli.py  governed_agent.py  logging.py
src/agentos/api/routers/: __init__.py  auth.py  compliance.py  deploy.py  marketplace.py  mesh.py  monitor.py  rag.py  sandbox.py  scheduler.py  teams.py
src/agentos/auth/: __init__.py  auth.py  middleware.py  models.py  org_models.py  org_store.py  routers.py  usage.json  usage.py  usage_sqlite.py  users.json
src/agentos/compliance/: __init__.py  audit_logger.py  compliance_report.py  data_classifier.py  policy_engine.py
src/agentos/core/: ab_testing.py  agent.py  branching.py  delegation.py  memory.py  multimodal.py  storage.py  streaming.py  team.py  tool.py  types.py  versioning.py
src/agentos/demo/: __init__.py  seed.py
src/agentos/deploy/: k8s_deployer.py
src/agentos/embed/: __init__.py  sdk.py  widget.py
src/agentos/events/: __init__.py  bus.py  triggers.py
src/agentos/governance/: __init__.py  audit.py  budget.py  guardrails.py  permissions.py
src/agentos/learning/: __init__.py  analyzer.py  feedback.py  few_shot.py  prompt_optimizer.py  report.py
src/agentos/marketplace/: __init__.py  manifest.py  models.py  registry.py  store.py
src/agentos/mcp/: __init__.py  adapter.py  config.py  server.py
src/agentos/mesh/: __init__.py  auth.py  discovery.py  mesh.py  mesh_router.py  protocol.py  registry.py  server.py  transaction.py
src/agentos/monitor/: server.py  store.py  ws_manager.py
src/agentos/observability/: __init__.py  alerts.py  diagnostics.py  replay.py  tracer.py
src/agentos/optimize/: __init__.py  optimizer.py
src/agentos/plugins/: __init__.py  base.py  manager.py
src/agentos/providers/: __init__.py  anthropic_provider.py  base.py  demo_provider.py  mock.py  ollama_provider.py  openai_provider.py  router.py
src/agentos/rag/: __init__.py  base_store.py  chunker.py  config.py  drift.py  embeddings.py  ingestion.py  pipeline.py  reranker.py  retriever.py  stores.py  types.py  vector_store.py
src/agentos/sandbox/: __init__.py  comparison.py  evaluation_scenario.py  metrics.py  runner.py  scenario.py  scorer.py  simulation_runner.py
src/agentos/scheduler/: __init__.py  job.py  scheduler.py
src/agentos/simulation/: __init__.py  evaluator.py  personas.py  report.py  traffic.py  world.py
src/agentos/teams/: __init__.py  dag.py  planner.py  runner.py
src/agentos/telemetry/: __init__.py  instruments.py
src/agentos/templates/: __init__.py  code_reviewer.py  customer_support.py  research_assistant.py  sales_agent.py
src/agentos/tools/: __init__.py  data_parser_tool.py  database_tool.py  document_tool.py  email_tool.py  file_tool.py  http_tool.py  rag_search_tool.py  rag_tool.py  safe_math.py  slack_tool.py  vision_tool.py  web_scraper_tool.py
src/agentos/web/: app.py  deps.py
src/agentos/web/routers/: __init__.py  agents.py  analytics.py  auth.py  branching.py  dashboard.py  embed.py  events.py  learning.py  marketplace.py  mesh.py  multimodal.py  observability.py  pages.py  scheduler.py  simulation.py  workflows.py  ws.py
src/agentos/web/static/: demo-banner.html  index.html
src/agentos/web/templates/: embed-preview.html
src/agentos/workflows/: __init__.py  runner.py  steps.py  workflow.py
src/agentos_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/agentos_sdk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: conftest.py  test_ab_testing.py  test_agent.py  test_compliance.py  test_drift.py  test_embeddings.py  test_governance.py  test_integration.py  test_learning.py  test_mcp_server.py  test_memory.py  test_mesh.py  test_metrics.py  test_mock_calculator_expression.py  test_observability.py  test_optimizer.py  test_rag.py  test_sandbox.py  test_sandbox_runner.py  test_teams.py  test_tool.py  test_types.py
