[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentos-platform"
version = "0.2.0"
description = "The Operating System for AI Agents — Build, Test, Deploy, Monitor, and Govern."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "Suketh Reddy Produtoor", email = "produtoor.s@northeastern.edu"},
]
keywords = ["ai", "agents", "llm", "openai", "anthropic", "governance", "monitoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.30.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/sukethrp/agentos"
Repository = "https://github.com/sukethrp/agentos"
Issues = "https://github.com/sukethrp/agentos/issues"

[project.scripts]
agentos = "agentos.cli:main"

[tool.setuptools.packages.find]
where = ["src"]