[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentos-platform"
version = "0.3.1"
description = "The Operating System for AI Agents — Build, Test, Deploy, Monitor, and Govern."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    {name = "Suketh Reddy Produtoor", email = "produtoor.s@northeastern.edu"},
]
keywords = ["ai", "agents", "llm", "openai", "anthropic", "governance", "monitoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.30.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-multipart>=0.0.6",
    "typer>=0.9.0",
    "kubernetes-asyncio>=28.0.0",
    "pyyaml>=6.0",
    "cachetools>=5.0.0",
    "networkx>=3.0",
    "rank_bm25>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
redis = [
    "redis>=5.0.0",
]
mcp = [
    "mcp>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]
otel = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
]
rag = [
    "chromadb>=0.4.0",
    "pinecone-client>=2.2.0",
    "pgvector>=0.2.0",
    "psycopg[binary]>=3.0",
]
local = ["sentence-transformers>=2.2.0", "scikit-learn>=1.3.0"]

[project.urls]
Homepage = "https://github.com/sukethrp/agentos"
Repository = "https://github.com/sukethrp/agentos"
Issues = "https://github.com/sukethrp/agentos/issues"

[project.scripts]
agentos = "agentos.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=agentos --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["agentos"]
branch = true

[tool.coverage.report]
fail_under = 20  # TODO: incrementally raise to 70% as test coverage improves
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]

[tool.ruff.lint.per-file-ignores]
# Deferred/lazy imports for optional features
"src/agentos/web/app.py" = ["E402"]
# conftest: sys.path setup before agentos import
"tests/conftest.py" = ["E402"]